# TOGA_mini

./: .gitignore  LICENSE  README.md  build_c.sh  configure.sh  environment.yaml  quick_test.sh  toga_mini.py
chain_class_models/: create_train.ipynb  readme.txt  train_toga_chain_class_model.py
toga_modules/: bed_hdf5_index.py  chain_bdb_index.py  chain_bed_intersect.py  chain_bst_index.py  chain_runner.py  classify_chains.py  common.py  constants.py  create_orthologous_loci_table.py  filter_bed.py  make_pr_pseudogenes_annotation.py  merge_chains_output.py  overlap_select.py  parallel_chain_runner.py  parallel_jobs_manager.py  parallel_jobs_manager_helpers.py  parse_cesar_output.py  split_chain_jobs.py  split_exon_realign_jobs.py  stitch_fragments.py  toga_sanity_checks.py  toga_util.py
util_c/: CMakeLists.txt
